--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -15,25 +15,13 @@ const t = useTranslation(lang);
 <header id="header" class="top-0 w-full bg-white shadow-lg transition-transform dark:bg-slate-950/80">
   <div class="container mx-auto px-2 md:border-none md:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
-      <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
-        <button
-          type="button"
-          class="inline-flex items-center justify-center rounded-md p-2 dark:hover:bg-gray-700"
-          aria-controls="mobile-menu"
-          aria-expanded="false"
-        >
-          <span class="sr-only" data-open-text={t("ui", "open_menu")} data-close-text={t("ui", "close_menu")}
-            >{t("ui", "open_menu")}</span
+      <div class="grid flex-1 items-center md:grid-cols-6 md:gap-4 lg:grid-cols-4">
+        <div class="flex shrink-0 items-center md:col-span-2 md:col-start-1 lg:col-span-1">
+          <a
+            class="inline-block focus:outline-none focus:ring-1"
+            href={getLocalizedPage(lang, "home")}
+            title={t("navigation", "go_home")}
           >
-          <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-            ></path>
-          </svg>
-        </button>
-      </div>
-      <div class="grid flex-1 items-center justify-center md:grid-cols-6 md:gap-4 lg:grid-cols-4">
-        <div class="col-start-2 flex shrink-0 items-center md:col-span-2 md:col-start-1 lg:col-span-1">
-          <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t('navigation', 'go_home')}>
             <svg viewBox="0 0 300 32" class="w-56 max-w-full md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M18.163 9.564L7.78 16.026l10.382 6.547-1.077 1.336-10.827-6.792v-2.24l10.97-6.778.934 1.465zm275.625 5.313v2.24l-10.827 6.792-1.077-1.393 10.382-6.49-14.144-8.86-10.094 20.72-1.479-.646 12.363-25.415 1.45.732-1.507 3.087 14.933 9.233z"
@@ -47,12 +35,11 @@ const t = useTranslation(lang);
         <div class="hidden md:col-span-3 md:block lg:col-span-2">
           <Nav lang={lang} activePage={basePath} />
         </div>
-        <div class="insert-0 absolute right-1 flex items-center justify-self-end pr-2 md:relative md:right-0">
+        <div class="insert-0 absolute right-1 flex items-center justify-self-end pr-2 md:relative md:right-0 lg:w-full">
           <button
-            id="search-button"
-            class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white"
+            id="search-trigger"
+            class="bg-slate ml-auto items-center gap-4 rounded-md p-2 hover:bg-blue-100/40 focus:outline-none focus:ring-1 dark:hover:bg-gray-700/60 dark:hover:text-white lg:grid lg:w-3/4 lg:grid-cols-[1.5rem,_repeat(2,_minmax(0,_1fr))] lg:bg-slate-50 lg:px-4 lg:dark:bg-gray-700/40"
           >
-            <span class="sr-only">{t("ui", "search")}</span>
             <svg
               class="h-6 w-6"
               fill="none"
@@ -64,23 +51,14 @@ const t = useTranslation(lang);
               <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
               ></path>
             </svg>
+            <span class="sr-only lg:not-sr-only">{t("ui", "search")}...</span>
+            <kbd class="hidden justify-self-end text-xs font-semibold lg:inline-block">/</kbd>
           </button>
         </div>
       </div>
     </div>
   </div>
-  <div class="mobile-menu grid transition-all md:hidden" id="mobile-menu" aria-hidden="true">
+  <div class="mobile-menu grid transition-all md:hidden" id="mobile-menu">
     <div class="overflow-hidden"><Nav lang={lang} isMobile activePage={basePath} /></div>
   </div>
 </header>
-
-<script src="./utils/mobile-menu.ts"></script>
-<style>
-  .mobile-menu {
-    grid-template-rows: 0fr;
-  }
-
-  .mobile-menu.open {
-    grid-template-rows: 1fr;
-  }
-</style>
