--- a/src/layouts/styles/fonts.css
+++ b/src/layouts/styles/fonts.css
@@ -1,14 +1,3 @@
-/*
-  DO NOT USE THIS FILE UNLESS IS ABSOLUTELY NECESSARY
-  This file is used to override the default styles of the components when they are
-  too hard to override using tailwind classes. This file should be used as a last
-  resort.
-
-  If you are using this file, please add a comment explaining why you are using it
-  and what you are trying to achieve.
-
-  Don't forget to import it on the `./Basic` layout.
-*/
 
 @font-face {
   font-family: "Inter";
@@ -36,10 +25,6 @@
   font-weight: 300;
   font-display: swap;
   src: url(/fonts/Fira-Code.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
-    U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-::target-text {
-  @apply bg-blue-100 text-neutral-900;
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
+    U+2C60-2C7F, U+A720-A7FF;
 }
