fix: minor dark theme adjustments

--- a/src/layouts/styles/main.css
+++ b/src/layouts/styles/main.css
@@ -33,7 +33,7 @@
   --astro-code-token-keyword: #e2e8f0;
   --astro-code-token-parameter: #e5e7eb;
   --astro-code-token-function: #60a5fa;
-  --astro-code-token-string-expression: #bfdbfe;
+  --astro-code-token-string-expression: #e0f2fe;
   --astro-code-token-punctuation: #e5e7eb;
   --astro-code-token-link: #3b82f6;
 }
