--- a/src/layouts/WithHeader.astro
+++ b/src/layouts/WithHeader.astro
@@ -41,5 +41,5 @@ const {
   </Fragment>
   <Header lang={lang} />
   <slot />
-  <GoToTop lang={lang} />
+  <GoToTop slot="post-footer" lang={lang} />
 </Basic>
