--- a/src/layouts/WithMiniHeader.astro
+++ b/src/layouts/WithMiniHeader.astro
@@ -38,5 +38,5 @@ const {
   </Fragment>
   <Header lang={lang} />
   <slot />
-  <GoToTop lang={lang} />
+  <GoToTop slot="post-footer" lang={lang} />
 </Basic>
