refact: use @fontsource instead of manual fonts
Finally the update that removes the custom property from the
`font-display` which means we can use FS again.

--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -4,6 +4,7 @@ import Layout from "@/layouts/Entry.astro";
 import { getBlogEntry, slugToCanonical } from "@/utils/content";
 import PostTranslations from "@/components/PostTranslations.astro";
 import type { Language } from "@/utils/i18n";
+import "@fontsource-variable/fira-code"
 
 interface Params {
   lang: Language;
