--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -5,7 +5,10 @@ import OpenGraphTags from "@/components/layout/OpenGraphTags.astro";
 import { slugToCanonical } from "@/utils/content";
 import Footer from "@/components/layout/Footer.astro";
 import type { DefaultLayoutProps } from "./types";
-import "./styles/fonts.css";
+// import "./styles/fonts.css";
+import '@fontsource-variable/inter'
+
+import "@fontsource-variable/red-hat-display"
 import "./styles/main.css";
 import { getEnv } from "@/utils/env";
 
