--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -23,7 +23,10 @@ const t = useTranslation(lang);
         </svg>
       </a>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
-        <button id="search-trigger" class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
+        <button
+          id="search-trigger"
+          class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white"
+        >
           <span class="sr-only">{t("ui", "search")}</span>
           <svg
             class="h-6 w-6"
