--- a/src/layouts/styles/main.css
+++ b/src/layouts/styles/main.css
@@ -47,9 +47,11 @@
 }
 
 .astro-code {
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); /* shadow-md */
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1); /* shadow-md */
 }
 :is(.dark) .astro-code {
   /* box-shadow: 0 1px 3px 0 #020617, 0 1px 2px -1px #020617; */
-  box-shadow: 0 0 0 2px rgb(100 116 139 / 30%)
+  box-shadow: 0 0 0 2px rgb(100 116 139 / 30%);
 }
