--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -42,7 +42,6 @@ const t = useTranslation(lang);
 ---
 
 <Layout
-  noHeaderSpacing
   lang={lang}
   canonical={canonical}
   description={t("page_descriptions", PAGE)}
@@ -50,7 +49,7 @@ const t = useTranslation(lang);
   translations={translations}
 >
   <main
-    class="bg-gradient-to-b dark:gradient-gray-slate lg:gradient-blue-transparent dark:bg-gradient-to-t lg:bg-gradient-to-r dark:lg:bg-gradient-to-t"
+    class="bg-gradient-to-b lg:gradient-blue-transparent dark:gradient-gray-slate lg:bg-gradient-to-r dark:bg-gradient-to-t dark:lg:bg-gradient-to-t"
   >
     <div class="container mx-auto h-full min-h-screen">
       <div class="h-full min-h-screen w-full">
@@ -59,10 +58,10 @@ const t = useTranslation(lang);
           <FullWidthBlock
             withContainer
             containerClass="h-full"
-            class="h-full items-center bg-blue-200 dark:bg-transparent lg:bg-transparent"
+            class="h-full items-center bg-blue-200 lg:bg-transparent dark:bg-transparent"
             resetAt="lg"
           >
-            <div class="prose grid h-full items-center dark:prose-invert xl:prose-lg">
+            <div class="prose grid h-full items-center xl:prose-lg dark:prose-invert">
               <div>
                 <h1 class="text-5xl text-blue-800 dark:text-blue-100">{frontmatter.title}</h1>
                 <p class="m-0 text-xl text-slate-600 dark:text-slate-400">{frontmatter.description}</p>
