--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -44,7 +44,7 @@ const t = useTranslation(lang);
   <main class="container mx-auto w-full px-8">
     <FullWidthBlock
       withContainer
-      class="overflow-hidden bg-gradient-to-tl from-blue-100 to-blue-200 text-xl leading-8 text-slate-800 shadow dark:bg-slate-950 dark:from-slate-900 dark:to-slate-950 dark:text-slate-300 lg:py-32"
+      class="overflow-hidden bg-gradient-to-tl from-blue-100 to-blue-200 text-xl leading-8 text-slate-800 shadow lg:py-32 dark:bg-slate-950 dark:from-slate-900 dark:to-slate-950 dark:text-slate-300"
     >
       <!-- Bootstrap times :D -->
       <div class="grid items-center gap-8 md:grid-cols-2 md:gap-32 lg:grid-cols-3">
@@ -63,11 +63,11 @@ const t = useTranslation(lang);
     </FullWidthBlock>
     <FullWidthBlock withContainer class="gradient-slate-slate bg-gradient-to-t dark:gradient-gray-slate">
       <div class="gap-8 py-16 lg:grid lg:grid-cols-2 xl:py-32">
-        <div class="prose dark:prose-invert xl:prose-lg prose-a:no-underline">
+        <div class="prose xl:prose-lg dark:prose-invert prose-a:no-underline">
           <slot name="blog" />
           <a
             href={blogURL}
-            class="mt-12 hidden rounded-md bg-white px-6 py-3 text-center font-semibold shadow outline-none ring ring-slate-100 transition-all hover:bg-blue-200 hover:ring-blue-100 focus:bg-blue-200 focus:ring-blue-100 active:bg-blue-200/80 dark:bg-slate-950 dark:ring-slate-900 dark:ring-offset-slate-950 dark:hover:bg-slate-900 dark:hover:ring-slate-950/50 dark:focus:bg-slate-900 dark:focus:ring-slate-950/50 dark:active:bg-slate-900/80 lg:inline-block"
+            class="mt-12 hidden rounded-md bg-white px-6 py-3 text-center font-semibold shadow outline-none ring ring-slate-100 transition-all hover:bg-blue-200 hover:ring-blue-100 focus:bg-blue-200 focus:ring-blue-100 active:bg-blue-200/80 lg:inline-block dark:bg-slate-950 dark:ring-slate-900 dark:ring-offset-slate-950 dark:hover:bg-slate-900 dark:hover:ring-slate-950/50 dark:focus:bg-slate-900 dark:focus:ring-slate-950/50 dark:active:bg-slate-900/80"
             rel="prefetch">{t("ui", "view_all_posts")}</a
           >
         </div>
@@ -75,7 +75,7 @@ const t = useTranslation(lang);
           {featuredPost && <FeaturedPost post={featuredPost.entry} meta={featuredPost.meta} />}
           <a
             href={blogURL}
-            class="mt-12 block rounded-md bg-white p-4 text-center font-semibold shadow outline-none ring ring-slate-100 transition-all hover:bg-blue-200 hover:ring-blue-100 focus:bg-blue-200 focus:ring-blue-100 active:bg-blue-200/80 dark:bg-slate-950 dark:ring-slate-900 dark:ring-offset-slate-950 dark:hover:bg-slate-900 dark:hover:ring-slate-950/50 dark:focus:bg-slate-900 dark:focus:ring-slate-950/50 dark:active:bg-slate-900/80 lg:hidden"
+            class="mt-12 block rounded-md bg-white p-4 text-center font-semibold shadow outline-none ring ring-slate-100 transition-all hover:bg-blue-200 hover:ring-blue-100 focus:bg-blue-200 focus:ring-blue-100 active:bg-blue-200/80 lg:hidden dark:bg-slate-950 dark:ring-slate-900 dark:ring-offset-slate-950 dark:hover:bg-slate-900 dark:hover:ring-slate-950/50 dark:focus:bg-slate-900 dark:focus:ring-slate-950/50 dark:active:bg-slate-900/80"
             rel="prefetch">{t("ui", "view_all_posts")}</a
           >
         </div>
@@ -83,7 +83,7 @@ const t = useTranslation(lang);
     </FullWidthBlock>
     <FullWidthBlock withContainer class="xl:py-32">
       <div class="space-y-8 md:space-y-12">
-        <div class="prose mx-auto dark:prose-invert xl:prose-lg">
+        <div class="prose mx-auto xl:prose-lg dark:prose-invert">
           <slot name="testimonials" />
         </div>
         <div class="mt-8 lg:mt-0">
