--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -33,7 +33,7 @@ const canonical = slugToCanonical("/404");
 >
   <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
     <div class="text-center">
-      <p class="text-xl text-blue-500 dark:text-blue-200 sm:text-4xl">404</p>
+      <p class="text-xl text-blue-500 sm:text-4xl dark:text-blue-200">404</p>
       <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("page_descriptions", "not_found")}</h1>
       <p class="mb-24 sm:mb-20">{t("messages", "page_not_found_message")}</p>
       <div class="space-x-8">
