--- a/src/layouts/WithHeader.astro
+++ b/src/layouts/WithHeader.astro
@@ -6,9 +6,7 @@ import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
 import GoToTop from "@/components/layout/GoToTop.astro";
 
-interface Props extends DefaultLayoutProps {
-  noHeaderSpacing?: boolean;
-}
+type Props = DefaultLayoutProps;
 
 const {
   title,
@@ -21,7 +19,6 @@ const {
   lang = DEFAULT_LOCALE,
   class: className,
   ["class:list"]: classList,
-  noHeaderSpacing,
 } = Astro.props;
 ---
 
