--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -34,7 +34,7 @@ const components = { Admonition: Admonition };
   image={imageURL}
   ogType="article"
 >
-  <main class="prose prose-gray mx-auto mb-12 mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl">
+  <main class="prose prose-gray mx-auto mb-12 mt-4 px-4 lg:prose-lg 2xl:prose-xl dark:prose-invert">
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
     </div>
