chore: Update node, pnpm and all dependencies (#30)
* core: update node, pnpm and green/yellow deps

* core: update all core deps

* format: run prettier

Also fix prettier by adding the astro plugin

* fix: eslint config

* lint: fix all and format

* refact: remove deprecated zod validations

* refact: add console.logs to avoid false warnings

Known astro-lang issue => https://github.com/withastro/language-tools/issues/476

* fix: image service

Also install now needed `sharp` for images

* core: update pnpm-lock file

--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -4,7 +4,7 @@ import Layout from "@/layouts/Entry.astro";
 import { getBlogEntry, slugToCanonical } from "@/utils/content";
 import PostTranslations from "@/components/PostTranslations.astro";
 import type { Language } from "@/utils/i18n";
-import "@fontsource-variable/fira-code"
+import "@fontsource-variable/fira-code";
 
 interface Params {
   lang: Language;
@@ -34,9 +34,7 @@ const components = { Admonition: Admonition };
   image={imageURL}
   ogType="article"
 >
-  <main
-    class="prose prose-gray mx-auto mb-12 mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
-  >
+  <main class="prose prose-gray mx-auto mb-12 mt-4 px-4 lg:prose-lg 2xl:prose-xl dark:prose-invert">
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
     </div>
