--- a/src/components/content/CardPost.astro
+++ b/src/components/content/CardPost.astro
@@ -18,7 +18,7 @@ const href = getEntryURL("blog", post.slug);
   <div>
     <a href={href} class="hover:underlinoe block focus:outline-none">
       <h2
-        class="mb-2 text-2xl font-semibold text-slate-900 group-hover:text-slate-950 md:mb-4 dark:text-blue-50 dark:group-hover:text-slate-100"
+        class="mb-2 text-2xl font-semibold text-slate-900 group-hover:text-slate-950 dark:text-blue-50 dark:group-hover:text-slate-100 md:mb-4"
       >
         {meta.title || post.data.title}
       </h2>
