--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -35,7 +35,7 @@ const translations = propTranslations
 ---
 
 <footer
-  class="container mx-auto border-t border-slate-200/50 px-2 py-6 text-center sm:px-6 sm:text-left dark:border-slate-700/50"
+  class="container mx-auto border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
 >
   <div class="flex items-center justify-center gap-4 pb-6 sm:justify-between">
     <ThemeSelector lang={lang} client:visible />
@@ -62,7 +62,7 @@ const translations = propTranslations
         }
       </div>
     </div>
-    <p class="block pt-2 text-slate-700 sm:hidden dark:text-slate-300">
+    <p class="block pt-2 text-slate-700 dark:text-slate-300 sm:hidden">
       <strong class="font-semibold">Misael Taveras</strong> ©️{year}
     </p>
   </div>
