--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -38,10 +38,10 @@ const t = useTranslation(lang);
         <div class="insert-0 absolute right-1 flex items-center justify-self-end pr-2 md:relative md:right-0 lg:w-full">
           <button
             id="search-trigger"
-            class="bg-slate ml-auto items-center gap-4 rounded-md p-2 hover:bg-blue-100/40 focus:outline-none focus:ring-1 lg:grid lg:w-3/4 lg:grid-cols-[1.5rem,_repeat(2,_minmax(0,_1fr))] lg:bg-slate-50 lg:px-4 dark:hover:bg-gray-700/60 dark:hover:text-white lg:dark:bg-gray-700/40"
+            class="bg-slate ml-auto items-center gap-4 rounded-md p-2 hover:bg-blue-100/40 focus:outline-none focus:ring-1 dark:hover:bg-gray-700/60 dark:hover:text-white lg:grid lg:w-3/4 lg:grid-cols-[1.5rem,_repeat(2,_minmax(0,_1fr))] lg:bg-slate-50 lg:px-4 lg:dark:bg-gray-700/40"
           >
             <svg
-              class="h-6 w-6"
+              class="size-6"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
