--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -29,7 +29,7 @@ const t = useTranslation(lang);
         >
           <span class="sr-only">{t("ui", "search")}</span>
           <svg
-            class="h-6 w-6"
+            class="size-6"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
