--- a/src/layouts/pages/About.astro
+++ b/src/layouts/pages/About.astro
@@ -52,7 +52,7 @@ const t = useTranslation(lang);
       >.
     </PageBanner>
     <div class="container mx-auto w-full">
-      <div class="prose prose-slate mx-auto px-4 lg:prose-lg 2xl:prose-xl dark:prose-invert">
+      <div class="prose prose-slate mx-auto px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl">
         <slot />
         <FullWidthBlock withContainer class="not-prose">
           <RecentPosts lang={lang} />
