typo: fix powered by translation key

--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -43,7 +43,7 @@ const copyText = {
     error: t("ui", "commandbar.error"),
     loading: t("ui", "commandbar.loading"),
     empty: t("ui", "commandbar.empty"),
-    searchPoweredBy: t("messages", "serch_powered_by"),
+    searchPoweredBy: t("messages", "search_powered_by"),
   },
 };
 ---
