--- a/src/components/PostTranslations.astro
+++ b/src/components/PostTranslations.astro
@@ -10,7 +10,7 @@ interface Props {
 
 const { translations, class: className } = Astro.props;
 
-const t = useTranslation(Astro.props.lang);
+const t = await useTranslation(Astro.props.lang);
 ---
 
 <aside class="my-6 rounded-sm bg-blue-100 p-4 text-sm dark:bg-slate-900" class:list={className}>
