--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -32,7 +32,7 @@ const manifest = lang === "es" ? "/manifest.json" : `/manifest-${lang}.json`;
 const { origin } = Astro.url;
 const { VERCEL_GIT_COMMIT_SHA: COMMIT_SHA } = getEnv();
 
-const t = useTranslation(lang);
+const t = await useTranslation(lang);
 
 const copyText = {
   commandBar: {
