--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -38,7 +38,7 @@ const translations = LANGUAGES.filter(l => l !== lang).map(language => ({
 }));
 
 const canonical = slugToCanonical(getLocalizedPage(lang, PAGE), origin);
-const t = useTranslation(lang);
+const t = await useTranslation(lang);
 
 const copyText = {
   form: {
