--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -18,7 +18,7 @@ const luckyPost = allPosts[Math.floor(Math.random() * allPosts.length)] as BlogE
 const homeURL = getLocalizedPage(lang, "home");
 const luckyURL = luckyPost ? getEntryURL("blog", luckyPost.entry.slug) : getLocalizedPage(lang, "blog");
 
-const t = useTranslation(lang);
+const t = await useTranslation(lang);
 const canonical = slugToCanonical("/404");
 ---
 
