BREAKING CHANGE: use `id`/`pid` instead of `slug`
Slugs are deprecated on the new collections API so we are deprecating them internally too

--- a/src/components/TranslationArchiveBanner.astro
+++ b/src/components/TranslationArchiveBanner.astro
@@ -1,7 +1,7 @@
 ---
 import { getLocalizedPage, DEFAULT_LOCALE, type Language, useTranslation } from "@/utils/i18n";
 import PageBanner from "./PageBanner.astro";
-import { type CollectionKey } from "@/utils/content";
+import type { CollectionKey } from "@/utils/content";
 
 export interface Props {
   lang: Language;
