--- a/src/components/content/FeaturedPost.astro
+++ b/src/components/content/FeaturedPost.astro
@@ -8,7 +8,7 @@ export interface Props {
 }
 
 const { post, meta } = Astro.props;
-const href = getEntryURL("blog", post.slug);
+const href = getEntryURL("blog", post.id);
 ---
 
 <div class="relative">
